use java.util.Base64.Decoder instead sun.misc.BASE64Decoder